Fixed hovered color of the navbar items in the tablet/phone view

--- a/css/all.css
+++ b/css/all.css
@@ -1,32 +1,23 @@
-/*
-
-all.css
-Created by Alex LaFroscia
-June 13, 2012
-
-Last Updated: June 13, 2012
-
-------------------------------------
-
-This is the CSS file for all of the
-attributes that will probably be used
-on most or all of the pages.  This
-does *not* include any CSS regarding
-the headers or footer.  However, it
-does containt the CSS for properly
-sizing and formatting the footer at the
-bottom of the page.
-
-------------------------------------
-
-
-*/
-/* ----  Footer at Bottom ---- */
+@media (max-width: 767px) {
+  body {
+    padding-right: 0px !important;
+    padding-left: 0px !important; } }
+@media all and (max-width: 980px) {
+  .navbar-inner .nav a:hover {
+    background-color: #4e784a !important; } }
 html, body {
-  height: 100%; }
+  height: 100%;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px; }
 
 body {
-  background-image: url(../background.png) !important; }
+  background-image: url("/harbingernews/img/background.png") !important; }
 
 #content {
   min-height: 100%;
@@ -40,20 +31,19 @@ body {
 #footer {
   width: 100%;
   min-height: 200px;
-  background: #466843;
+  background-color: #466843;
   clear: both;
   border-top: 4px solid #629b63;
   color: white; }
-
-h3#footer {
-  padding-top: 0px; }
+  #footer h3 {
+    padding-top: 0px; }
 
 .important_links {
   border-left: #629b63 solid 2px;
   margin-top: 10px;
   padding-left: 5px; }
 
-#title {
+#footerTitle {
   font-size: 1.25em;
   margin-bottom: 5px;
   padding: 0;
@@ -92,11 +82,27 @@ h3#footer {
   padding-left: 6px;
   background: #466843; }
 
-#title a {
+#footerTitle a {
   text-decoration: none; }
-
-#title a:hover {
-  text-decoration: underline !important; }
+  #footerTitle a:hover {
+    text-decoration: underline !important; }
 
 #installgcf {
   display: none; }
+
+.navbar-inner {
+  background-color: #466843 !important;
+  background-image: none !important;
+  border-bottom: 4px solid #629b62 !important; }
+  .navbar-inner a {
+    color: white !important;
+    text-shadow: 0px 1px 0px #717171 !important; }
+  .navbar-inner .active a {
+    background-color: #629b62 !important; }
+
+.brand a {
+  text-shadow: 0 1px 0 #ffffff !important; }
+
+.btn-navbar {
+  background-color: #3e5f3b !important;
+  background-image: none !important; }
