--- a/css/news.css
+++ b/css/news.css
@@ -140,6 +140,9 @@ img#talk_bubble {
   body {
     padding-right: 0px !important;
     padding-left: 0px !important; } }
+@media all and (max-width: 980px) {
+  .navbar-inner .nav a:hover {
+    background-color: #4e784a !important; } }
 html, body {
   height: 100%;
   padding-top: 0px;
