--- a/css/sports/sports.css
+++ b/css/sports/sports.css
@@ -2,6 +2,9 @@
   body {
     padding-right: 0px !important;
     padding-left: 0px !important; } }
+@media all and (max-width: 980px) {
+  .navbar-inner .nav a:hover {
+    background-color: #4e784a !important; } }
 html, body {
   height: 100%;
   padding-top: 0px;
