Added ".disabled" for sports tiles 	-> Disabled links are greyed out and unclickable ".disable"'d all links to specific sports

--- a/css/sports/sports.css
+++ b/css/sports/sports.css
@@ -209,6 +209,13 @@ body {
   margin-top: 12px;
   margin-bottom: 12px;
   padding-top: 5px; }
+  #center a {
+    color: #568e63 !important; }
+    #center a:hover {
+      color: #487a54 !important; }
+  #center .disabled a {
+    color: #aaaaaa !important;
+    text-shadow: 2px 2px 2px #616161; }
 
 .sport {
   margin: 0 auto;
