Tweaked the CSS to move the title higher and add some padding to the bottom of the content

--- a/scss/sports/template.scss
+++ b/scss/sports/template.scss
@@ -20,6 +20,7 @@ body {
 #center {
 	margin: {
 		top: 10px;
+		bottom: 10px;
 	}
 	background: {
 		color: white;
@@ -60,7 +61,7 @@ body {
 	}
 	h1 {
 		position: inherit !important;
-		top: 130px;
+		top: 125px;
 		color: white;
 		width: 95%;
 		margin: 0 auto;
