--- a/css/sports/template.css
+++ b/css/sports/template.css
@@ -116,6 +116,7 @@ body {
 
 #center {
   margin-top: 10px;
+  margin-bottom: 10px;
   background-color: white;
   box-shadow: 0px 2px 7px #3c3c3c;
   behavior: url("/harbingernews/pie/PIE.htc"); }
@@ -139,7 +140,7 @@ body {
   margin-bottom: 5px; }
   #title h1 {
     position: inherit !important;
-    top: 130px;
+    top: 125px;
     color: white;
     width: 95%;
     margin: 0 auto;
