--- a/scss/sports/_sportstiles.scss
+++ b/scss/sports/_sportstiles.scss
@@ -73,3 +73,11 @@
 #wrestling {
 	@include backgroundTile('/harbingernews/sports/wrestling/background-tile.png');
 }
+
+#bsoccer {
+	@include backgroundTile('/harbingernews/sports/soccer/background-tile.png');
+}
+
+#gsoccer {
+	@include backgroundTile('/harbingernews/sports/soccer/background-tile.png');
+}
