--- a/css/news.css
+++ b/css/news.css
@@ -218,3 +218,9 @@ html, body {
 
 #installgcf {
   display: none; }
+
+.navbar-static-top {
+  z-index: 100;
+  position: relative;
+  box-shadow: 0px 0px 4px 0px #3e3e3e;
+  behavior: url("/harbingernews/pie/PIE.htc"); }
