--- a/css/sports/sports.css
+++ b/css/sports/sports.css
@@ -80,6 +80,12 @@ html, body {
 #installgcf {
   display: none; }
 
+.navbar-static-top {
+  z-index: 100;
+  position: relative;
+  box-shadow: 0px 0px 4px 0px #3e3e3e;
+  behavior: url("/harbingernews/pie/PIE.htc"); }
+
 #baseball {
   background-image: url("/harbingernews/sports/baseball/background-tile.png");
   background-position: center;
