--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -49,6 +49,18 @@
 		display: block !important;
 		float: right;
 		width: 175px;
+		div {
+			$height: 140px;
+			border-radius: 15px;
+			box-shadow: 0px 1px 6px rgba(0,0,0,0.8);
+			height: $height;
+			min-height: $height;
+			max-height: $height;
+			text-align: center;
+			&:hover {
+				box-shadow: 0px 1px 7px 1px black;
+			}
+		}
 	}
 	
 	#stuff {
@@ -67,11 +79,19 @@
 		background: {
 			color: #c51046;
 		}
-		border-radius: 15px;
-		box-shadow: 0px 1px 6px rgba(0,0,0,0.8);
-		text-align: center;
-		&:hover {
-			box-shadow: 0px 1px 7px 1px black;
+			}
+	#snowflake {
+		background: {
+			color: #286cff !important;
+		}
+		color: white;
+		h4 {
+			position: relative;
+			top: 10px;
+		}
+		p {
+			position: relative;
+			top: 35px;
 		}
 	}
 }
@@ -167,9 +187,15 @@ body {
 			clear: both;
 		}
 	}
+	.chunk {
+		h2 {
+			display: none;
+		}
+	}
 }
 
 #postits {
+	$height: 140px;
 	@include pie;
 	margin: 0 auto;
 	margin: {
@@ -183,7 +209,9 @@ body {
 		}
 		border-radius: 15px;
 		box-shadow: 0px 1px 6px rgba(0,0,0,0.8);
-		min-height: 30px;
+		height: $height;
+		min-height: $height;
+		max-height: $height;
 		padding: {
 			top: 2px;
 			bottom: 2px;
@@ -198,15 +226,33 @@ body {
 			color: #c51046 !important;
 		}
 	}
+	#snowflake {
+		background: {
+			color: #286cff !important;
+		}
+		color: white;
+		p {
+			position: relative;
+			margin: 0 auto;
+			top: 23px;
+			width: 80%;
+		}
+		h4 {
+			position: relative;
+			top: 10px;
+			margin: 0 auto;
+			width: 80%;
+		}
+	}
 }
 
 #events {
 	margin: 0 auto;
 	margin: {
-		top: 10px;
+		top: 13px;
 		bottom: 10px;
 	}
-	width: 90%;
+	width: 89%;
 	h3 {
 		margin: {
 			bottom: 5px;
@@ -219,8 +265,10 @@ body {
 			color: #fffac1;
 		}
 		box-shadow: 1px 1px 6px rgba(0,0,0,0.68);
+		text-align: center;
 	}
 	#recent {
 		box-shadow: 1px 1px 6px rgba(0,0,0,0.68);
+		text-align: center;
 	}
 }
