Added some finishing touches

--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -94,6 +94,23 @@
 			top: 35px;
 		}
 	}
+	#playfest {
+		color: white;
+		background: {
+			color: #319358 !important;
+		}
+		h4 {
+			margin: {
+				bottom: 23px;
+			}
+			position: relative;
+			top: 10px;
+		}
+		p {
+			margin: 0 auto;
+			width: 95%
+		}
+	}
 }
 
 // All
@@ -242,6 +259,16 @@ body {
 			top: 10px;
 			margin: 0 auto;
 			width: 80%;
+		}
+	}
+	#playfest {
+		color: white;
+		background: {
+			color: #319358 !important;
+		}
+		p {
+			margin: 0 auto;
+			width: 90%
 		}
 	}
 }
