Fixed the caret to be white instead of grey

--- a/scss/_all.scss
+++ b/scss/_all.scss
@@ -216,3 +216,8 @@ body {
 .dropdown-submenu:hover > a {
 	color: white !important;
 }
+
+.caret {
+	border-top-color: white !important;
+	border-bottom-color: white !important;
+}
