--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -106,6 +106,8 @@
 	}
 }
 
+
+
 // All
 
 body {
@@ -213,7 +215,6 @@ body {
 
 #postits {
 	$height: 140px;
-	@include pie;
 	margin: 0 auto;
 	margin: {
 		top: 12px;
@@ -221,6 +222,7 @@ body {
 	}
 	width: 89% !important;
 	.span4 {
+		@include pie;
 		background: {
 			color: red;
 		}
@@ -239,11 +241,13 @@ body {
 		}
 	}
 	#yearbook {
+		@include pie;
 		background: {
 			color: #c51046 !important;
 		}
 	}
 	#snowflake {
+		@include pie;
 		background: {
 			color: #286cff !important;
 		}
@@ -262,6 +266,7 @@ body {
 		}
 	}
 	#playfest {
+		@include pie;
 		color: white;
 		background: {
 			color: #319358 !important;
@@ -288,6 +293,7 @@ body {
 		text-align: center;
 	}
 	#upcoming {
+		@include pie;
 		background: {
 			color: #fffac1;
 		}
@@ -295,6 +301,9 @@ body {
 		text-align: center;
 	}
 	#recent {
+		background: {
+			color: #ffffff;
+		}
 		box-shadow: 1px 1px 6px rgba(0,0,0,0.68);
 		text-align: center;
 	}
