--- a/css/homepage.css
+++ b/css/homepage.css
@@ -100,7 +100,8 @@ body {
 .navbar-inner {
   background-color: #466843 !important;
   background-image: none !important;
-  border-bottom: 4px solid #629b62 !important; }
+  border-bottom: 4px solid #629b62 !important;
+  filter: none !important; }
   .navbar-inner a {
     color: white !important;
     text-shadow: 0px 1px 0px #717171 !important; }
@@ -108,7 +109,7 @@ body {
     background-color: #629b62 !important; }
 
 .brand a {
-  text-shadow: 0 1px 0 #ffffff !important; }
+  text-shadow: 0 1px 0 white !important; }
 
 .btn-navbar {
   background-color: #3e5f3b !important;
