--- a/scss/_all.scss
+++ b/scss/_all.scss
@@ -161,6 +161,7 @@ body {
 	background-color: #466843 !important;
 	background-image: none !important;
 	border-bottom: 4px solid #629b62 !important;
+	filter: none !important;
 	a {
 		color: white !important;
 		text-shadow: 0px 1px 0px #717171 !important;
