Bug fixes for IE 8
- Fixed the misplacement of some elements due to the use of pie.
- Pie and Bootstrap do not mix well.  Must remember this for the future.

--- a/scss/homepage_ie.scss
+++ b/scss/homepage_ie.scss
@@ -1,6 +1,14 @@
 #postits {
 	.span4 {
-		behavior: url('/harbingernews/PIE/pie.htc');
+		behavior: none !important;
+		box-shadow: none !important;
+		border-radius: none !important;
+		border: 1px solid #111111;
+		&:hover {
+			behavior: none !important;
+			box-shadow: none !important;
+			border-radius: none !important;
+		}
 	}
 }
 
@@ -10,5 +18,12 @@
 		background: {
 			color: #ffffff !important;
 		}
+		box-shadow: none !important;
+		border: 1px solid #111111;
+	}
+	#upcoming {
+		behavior: url('/harbingenews/PIE/pie.htc');
+		box-shadow: none !important;
+		border: 1px solid #111111;
 	}
 }
