--- a/css/homepage_ie.css
+++ b/css/homepage_ie.css
@@ -1,6 +1,19 @@
 #postits .span4 {
-  behavior: url("/harbingernews/PIE/pie.htc"); }
+  behavior: none !important;
+  box-shadow: none !important;
+  border-radius: none !important;
+  border: 1px solid #111111; }
+  #postits .span4:hover {
+    behavior: none !important;
+    box-shadow: none !important;
+    border-radius: none !important; }
 
 #events #recent {
   behavior: url("/harbingernews/PIE/pie.htc");
-  background-color: #ffffff !important; }
+  background-color: white !important;
+  box-shadow: none !important;
+  border: 1px solid #111111; }
+#events #upcoming {
+  behavior: url("/harbingenews/PIE/pie.htc");
+  box-shadow: none !important;
+  border: 1px solid #111111; }
