--- a/css/clubs.css
+++ b/css/clubs.css
@@ -105,10 +105,8 @@ body {
   .navbar-inner a {
     color: white !important;
     text-shadow: 0px 1px 0px #717171 !important; }
-    .navbar-inner a:hover {
-      background-color: #4a683e !important; }
   .navbar-inner .active a {
-    background-color: #639c63 !important; }
+    background-color: #629b62 !important; }
 
 .brand a {
   text-shadow: 0 1px 0 white !important; }
@@ -116,3 +114,88 @@ body {
 .btn-navbar {
   background-color: #3e5f3b !important;
   background-image: none !important; }
+.nav li a {
+  color: #629b63;
+  background: inherit;
+}
+
+.nav li {
+  background: inherit;
+}
+
+.nav-collapse > .nav > .active > a {
+  background: #629b63 !important;
+}
+.nav ul li a {
+  background-color: white !important;
+  color: #629b63 !important;
+}
+.about {
+  width: 70%; 
+  background-color: white; 
+  box-shadow: 0px 2px 2px 0px; 
+  padding: 5px 10px 5px 10px; 
+  margin-top: 10px; 
+  float: left;
+}
+
+#page {
+  margin-top: 10px;
+  background: white;
+  margin-bottom: 10px;
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#announcements {
+  background: #fff;
+  padding: 10px;
+  margin-bottom: 0px;
+  margin-top: 20px;
+  margin-left: 15% !important;
+  margin-right: 15%;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
+  -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.18); 
+}
+      
+.navbar li.dropbown {
+  background-image: none !important;
+}
+      
+.navbar li.dropdown.open {
+  background-color: #4a683e !important;
+}
+      
+.navbar li.dropdown.open > .dropdown-toggle {
+  background-color: #4a683e !important;
+}
+
+#upcoming_events {
+  background: rgb(70,104,67);
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border-style: outset;
+  border-width: medium;
+  border-color: #629b63;
+  color: white;
+  right:5%;
+  position:absolute; 
+  width: 20%;
+}
+#pictures {
+  background: rgb(70,104,67);
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-left: 5%;
+  border-style: outset;
+  border-width: medium;
+  border-color: #629b63;
+  color: white; 
+  float: right;
+  width: 20%;
+  text-align: center;
+  font-size: 20px;
+}
