--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -135,3 +135,8 @@ body {
 .caret {
   border-top-color: white !important;
   border-bottom-color: white !important; }
+
+#stuff {
+  background-color: white;
+  margin-top: 10px;
+  min-height: 10px; }
