--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -136,5 +136,29 @@ body {
   border-top-color: white !important;
   border-bottom-color: white !important; }
 
+h1 {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  border-bottom: 1px solid #efefef;
+  padding-bottom: 10px;
+  margin: 0 auto !important;
+  text-align: center;
+  width: 550px; }
+
+h2 {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  margin-left: 10px !important; }
+
+p {
+  padding-left: 10px !important;
+  padding-right: 10px !important; }
+
+hr {
+  width: 75%; }
+
 #page {
-  background-color: white; }
+  behavior: url("/harbingernews/pie/PIE.htc");
+  background-color: white;
+  box-shadow: 0px 1px 6px black;
+  border-radius: 3px;
+  margin-top: 10px;
+  min-height: 10px; }
