--- a/assets/css/homepage.css
+++ b/assets/css/homepage.css
@@ -108,7 +108,7 @@ body {
     background-color: #629b62 !important; }
 
 .brand a {
-  text-shadow: 0 1px 0 #ffffff !important; }
+  text-shadow: 0 1px 0 white !important; }
 
 .btn-navbar {
   background-color: #3e5f3b !important;
@@ -264,6 +264,13 @@ body {
     font-size: 16px;
     line-height: 18px;
     padding-bottom: 6px; }
+
+.alert {
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: -3px;
+  width: 84%; }
 
 #postits {
   behavior: url("/harbingernews/pie/PIE.htc");
