--- a/assets/scss/homepage.scss
+++ b/assets/scss/homepage.scss
@@ -211,6 +211,16 @@ body {
 	}
 }
 
+.alert {
+	margin: {
+		top: 10px;
+		left: auto;
+		right: auto;
+		bottom: -3px;
+	}
+	width: 84%;
+}
+
 #postits {
 	$height: 140px;
 	@include pie;
