Got an individual sports page up and running!

--- a/app/views/layouts/sportspage.html.erb
+++ b/app/views/layouts/sportspage.html.erb
@@ -3,9 +3,14 @@
 <head>
   <title>Harbingernews</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag    "sportspage", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <style type="text/css"><%= yield :style %></style>
+  <style type="text/css">
+    #title { 
+      background-image: url( <%= @sport.photo_path %> );
+    }
+  </style>
 </head>
 <body>
 
