--- a/app/assets/stylesheets/sports_index.css.scss
+++ b/app/assets/stylesheets/sports_index.css.scss
@@ -1,3 +1,9 @@
+/*
+*=require bootstrap
+*=require bootstrap-responsive
+*=require_self
+*/
+
 @import "all";
 @import "sportstiles";
 // Adds in the sport tile backgrounds, which are in a separate file for organization's sake
