--- a/app/views/layouts/sports_index.html.erb
+++ b/app/views/layouts/sports_index.html.erb
@@ -2,15 +2,10 @@
 <html>
 <head>
   <title>Harbingernews</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= stylesheet_link_tag    "sportspage", :media => "all" %>
+  <%= stylesheet_link_tag    "sports_index", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <style type="text/css">
-    #title { 
-      background-image: url( <%= @sport.photo_path %> );
-    }
-  </style>
+  <style type="text/css"><%= yield :style %></style>
 </head>
 <body>
 
