--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -1,31 +1,75 @@
-<h1>Listing sports</h1>
-
-<table>
-  <tr>
-    <th>Slug</th>
-    <th>Title</th>
-    <th>Content</th>
-    <th>Season</th>
-    <th>Photo path</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @sports.each do |sport| %>
-  <tr>
-    <td><%= sport.slug %></td>
-    <td><%= sport.title %></td>
-    <td><%= sport.content %></td>
-    <td><%= sport.season %></td>
-    <td><%= sport.photo_path %></td>
-    <td><%= link_to 'Show', sport %></td>
-    <td><%= link_to 'Edit', edit_sport_path(sport) %></td>
-    <td><%= link_to 'Destroy', sport, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New Sport', new_sport_path %>
+<div class="container" id="center">
+	<ul class="nav nav-tabs affix-top container" data-spy="affix" data-offset-top="60" id="seasonsswitcher">
+		<li id="firsttab"><a></a></li>
+		<li><a href="#fall" data-toggle="tab">Fall</a></li>
+		<li class="active"><a href="#winter" data-toggle="tab">Winter</a></li>
+		<li><a href="#spring" data-toggle="tab">Spring</a></li>
+	</ul>
+	<div class="row-fluid">
+		<div class="span8">
+			<div class="tab-content">
+			
+				<div class="tab-pane" id="fall">
+					<% @fall.each do |sport| %>
+					<div class="sport" style="background-image: url(" <%= sport.photo_path %> ");">
+						<div class="inner">
+					  		<h2><%= sport.title %></h2>
+				  			<div class="holder">
+				  				<div class="pull-left">
+									<h3><a href="http://0.0.0.0:3000/sports/"<%= sport.id %>"">Varsity</a></h3>
+								</div>
+								<div class="pull-right">
+									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
+								</div>
+							</div>
+						</div>
+					</div>
+					<% end %>
+				</div>
+				
+				<div class="tab-pane active" id="winter">
+					<% @winter.each do |sport| %>
+					<div class="sport" style="background-image: url(" <%= sport.photo_path %> ");">
+						<div class="inner">
+					  		<h2><%= sport.title %></h2>
+				  			<div class="holder">
+				  				<div class="pull-left">
+									<h3><a href="http://0.0.0.0:3000/sports/"<%= sport.id %>"">Varsity</a></h3>
+								</div>
+								<div class="pull-right">
+									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
+								</div>
+							</div>
+						</div>
+					</div>
+					<% end %>
+				</div>
+				
+				<div class="tab-pane" id="spring">
+					<% @spring.each do |sport| %>
+					<div class="sport" style="background-image: url(" <%= sport.photo_path %> ");">
+						<div class="inner">
+					  		<h2><%= sport.title %></h2>
+				  			<div class="holder">
+				  				<div class="pull-left">
+									<h3><a href="http://0.0.0.0:3000/sports/"<%= sport.id %>"">Varsity</a></h3>
+								</div>
+								<div class="pull-right">
+									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
+								</div>
+							</div>
+						</div>
+					</div>
+					<% end %>
+				</div>
+				
+		  </div><!-- end "tab-content" -->
+		</div>
+		  
+	  <div class="span4 hidden-phone" id="recent_events">
+			<div class="well">
+			  <h3>Recent Events</h3>
+			</div>
+	  </div>
+  </div>
+</div>
