--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -11,7 +11,8 @@
 			
 				<div class="tab-pane" id="fall">
 					<% @fall.each do |sport| %>
-					<div class="sport" style="background-image: url(" <%= sport.photo_path %> ");">
+					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
+					<div class="sport" style="background-image: url(<%= photo_path %>);">
 						<div class="inner">
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
@@ -29,7 +30,8 @@
 				
 				<div class="tab-pane active" id="winter">
 					<% @winter.each do |sport| %>
-					<div class="sport" style="background-image: url(" <%= sport.photo_path %> ");">
+					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
+					<div class="sport" style="background-image: url(<%= photo_path %>);">
 						<div class="inner">
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
@@ -47,7 +49,8 @@
 				
 				<div class="tab-pane" id="spring">
 					<% @spring.each do |sport| %>
-					<div class="sport" style="background-image: url(" <%= sport.photo_path %> ");">
+					<% photo_path = "/assets/sports/" + sport.slug + ".png" %>
+					<div class="sport" style="background-image: url(<%= photo_path %>);">
 						<div class="inner">
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
