--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,9 +4,9 @@
 				<div class="important_links span4 offset2">
 					<span id="footerTitle">Important Links</span>
 					<ul>
-						<li>About This Site</li>
+						<li><%= link_to "About Page", about_path %></li>
 						<li>The Harbinger Team</li>
-						<li>Get Involved</li>
+						<li><%= link_to "Get Involved", get_involved_path %></li>
 					</ul>
 				</div> <!-- end "important" -->
 				<div class="contact span4">
