--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,13 +6,13 @@
   				<span class="icon-bar"></span>
   				<span class="icon-bar"></span>
   			</a>
-  			<a class="brand" href="/harbingernews/">The Harbinger Online</a>
+  			<a class="brand" href="#">The Harbinger Online</a>
   			<div class="nav-collapse">
   				<ul class="nav">
-  					<li id="nav_home"><a href="<?php echo base_url(); ?>">Home</a></li>
-  					<li id="nav_news"><a href="<?php echo base_url() . 'index.php/news'; ?>">News</a></li>
-  					<li id="nav_sports"><a href="<?php echo base_url() . 'index.php/sports'; ?>">Sports</a></li>
-  					<li id="nav_clubs"><a href="<?php echo base_url() . 'index.php/clubs'; ?>">Clubs</a></li>
+  					<li id="nav_home"><a href="#">Home</a></li>
+  					<li id="nav_news"><a href="#">News</a></li>
+  					<li id="nav_sports"><%= link_to "Sports", sports_path %></li>
+  					<li id="nav_clubs"><a href="#">Clubs</a></li>
   				</ul>
   		  </div>
   		</div>
