Added a container div for layout superiority
You can tell it's late when my commit messages become kind of strange

--- a/app/views/sports/edit.html.erb
+++ b/app/views/sports/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing sport</h1>
+<div class="container">
+  
+  <h1>Editing sport</h1>
+  
+  <%= render 'form' %>
+  
+  <%= link_to 'Show', @sport %> |
+  <%= link_to 'Back', sports_path %>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @sport %> |
-<%= link_to 'Back', sports_path %>
+</div>
