I'm not sure what happened, but Sprockets stopped pulling in my stylesheets.  This manually compiles them in using SASS.
Probably just as good of a way to do it anyway, but I'm worried that this stopped working suddenly.

--- a/app/assets/stylesheets/sports_index.css.scss
+++ b/app/assets/stylesheets/sports_index.css.scss
@@ -1,9 +1,12 @@
 /*
 *=require bootstrap
 *=require bootstrap-responsive
+*=require_tree
 *=require_self
 */
 
+@import "bootstrap";
+@import "bootstrap-responsive";
 @import "all";
 @import "sportstiles";
 // Adds in the sport tile backgrounds, which are in a separate file for organization's sake
