--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,9 +8,11 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require bootstrap
- *= require bootstrap-responsive
- *= require_self
+ * =require bootstrap
+ * =require bootstrap-responsive
+ * =require_self
  */
  
-@import "all";
+ @import "bootstrap";
+ @import "bootstrap-responsive";
+ @import "all";
