--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -17,7 +17,7 @@
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
 				  				<div class="pull-left">
-									<h3><a href="http://0.0.0.0:3000/sports/"<%= sport.id %>"">Varsity</a></h3>
+									<h3><a href="http://0.0.0.0:3000/sports/<%= sport.slug %>">Varsity</a></h3>
 								</div>
 								<div class="pull-right">
 									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
@@ -36,7 +36,7 @@
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
 				  				<div class="pull-left">
-									<h3><a href="http://0.0.0.0:3000/sports/"<%= sport.id %>"">Varsity</a></h3>
+									<h3><a href="http://0.0.0.0:3000/sports/<%= sport.slug %>">Varsity</a></h3>
 								</div>
 								<div class="pull-right">
 									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
@@ -55,7 +55,7 @@
 					  		<h2><%= sport.title %></h2>
 				  			<div class="holder">
 				  				<div class="pull-left">
-									<h3><a href="http://0.0.0.0:3000/sports/"<%= sport.id %>"">Varsity</a></h3>
+									<h3><a href="http://0.0.0.0:3000/sports/<%= sport.slug %>">Varsity</a></h3>
 								</div>
 								<div class="pull-right">
 									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
