--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title>Harbingernews</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= favicon_link_tag %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
   <%= csrf_meta_tags %>
   <style type="text/css"><%= yield :style %></style>
 </head>
