--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -18,6 +18,7 @@
     		$(this).find('.holder').fadeOut($time);
     		$(this).find('h2').removeClass("faded_text", $time);
     	});
+    	$('#nav_sports').addClass('active');
     });
   </script>
 </head>
