--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -54,11 +54,11 @@
 				</div><!-- end header -->
 				<div class="row-fluid" id="announcements">
 					<h3>Today's Announcements</h3>
-					 <p>ANNOUNCEMENTS</p>
+					 <p><%= @announcement.content %></p>
 				</div>
 				<div class="row-fluid" id="postits">
 					<a href="http://www.yearbookforever.com/ssDeepLink.aspx?sid=1-23J-32132&dest=BAYB"><div class="span4" id="yearbook">
-						<img src="<?php echo base_url(); ?>assets/img/ssDeepLink.png" alt="Buy a Yearbook" />
+						<img src="" alt="Buy a Yearbook" />
 					</div></a>
 					<div class="span4" id="snowflake">
 						<h4>Support LB Storm Clean-Up</h4>
