--- a/app/views/sports/_form.html.erb
+++ b/app/views/sports/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_field :content %>
+    <%= f.text_area :content %>
   </div>
   <div class="field">
     <%= f.label :season %><br />
