Testing to get the server working on Heroku

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -75,7 +75,7 @@
 			</div>
 			<div class="well" id="sidebar">
 				<a href="http://www.yearbookforever.com/ssDeepLink.aspx?sid=1-23J-32132&dest=BAYB"><div id="yearbook">
-					<img src="<?php echo base_url(); ?>assets/img/ssDeepLink.png" alt="Buy a Yearbook" />
+					<img src="" alt="Buy a Yearbook" />
 				</div></a>
 				<div id="snowflake">
 					<h4>Support LB Storm Clean-Up</h4>
