--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,7 +47,7 @@
 				</div><!-- end header -->
 				<div class="row-fluid" id="announcements">
 					<h3>Today's Announcements</h3>
-					 <p></p>
+					 <p><%= @announcement.content %></p>
 				</div>
 				<div class="row-fluid" id="postits">
 					<a href="http://www.yearbookforever.com/ssDeepLink.aspx?sid=1-23J-32132&dest=BAYB"><div class="span4" id="yearbook">
