--- a/app/views/sports/show.html.erb
+++ b/app/views/sports/show.html.erb
@@ -34,9 +34,7 @@
     	</ul>
     	<div class="tab-content">
     		<div class="tab-pane active limited-width" id="info">
-    			<div class="alert">
-    				This is an alert!
-    			</div>
+    			<%= @sport.alert %>
     			<p><%= @sport.content %></p>
     		</div>
     		<div class="tab-pane limited-width" id="photos">
