--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
-<div class="container">  
-  <%= @user.name %>, <%= @user.email %>
+<% provide(:title, @user.name) %>
+<div class="container"> 
+  <%= gravatar_for @user %> 
+  <%= @user.name %>
     
   <%= debug(params) if Rails.env.development? %>
 </div>
