--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
   <h1>User Index</h1>
-  <% @users.each do |user| %>
-    <%= user.name %>
-  <% end  %>
+  <% @users.each do |person| %>
+    <%= person.name %>
+  <% end %>
+  
+  <%= debug(params) if Rails.env.development? %>
 </div>
