--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,26 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="container">
+  <h1>Sign Up</h1>
+  <div class="row">
+    <div class="span12">
+      <%= form_for (@user) do |f| %>
+        <%= render 'shared/error_messages' %>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+        
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+        
+        <%= f.label :password %>
+        <%= f.text_field :password %>
+        
+        <%= f.label :password_confirmation %>
+        <%= f.text_field :password_confirmation %>
+      
+        <br />
+        <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+      
+      <% end %>
+      <%= debug(params) if Rails.env.development? %>
+    </div>
+  </div>
+</div>
