Got club index and show pages working, and fixed links in sport pages.
A lot got done in this commit. I managed to get the club pages working, and also fixed the links in the sport pages. It turns out you dont need 'localhost:3000/sports/', you just need '/sports/'.

Will work on 'edit' and 'new' pages soon.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
   					<li id="nav_home"><%= link_to "Home", "/" %></li>
   					<li id="nav_news"><a href="#">News</a></li>
   					<li id="nav_sports"><%= link_to "Sports", sports_path %></li>
-  					<li id="nav_clubs"><a href="#">Clubs</a></li>
+  					<li id="nav_clubs"><%= link_to "Clubs", clubs_path %></li>
   				</ul>
   		  </div>
   		</div>
