--- a/app/views/sports/index.html.erb
+++ b/app/views/sports/index.html.erb
@@ -43,7 +43,9 @@
     					  		<h2><%= sport.title %></h2>
     				  			<div class="holder">
     				  				<div class="pull-left">
-    									<h3><a href="http://0.0.0.0:3000/sports/<%= sport.slug %>">Varsity</a></h3>
+    									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
+
+                                        <!-- Change 0.0.0.0:3000 - not localhost -->
     								</div>
     								<div class="pull-right">
     									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
@@ -61,7 +63,7 @@
     					  		<h2><%= sport.title %></h2>
     				  			<div class="holder">
     				  				<div class="pull-left">
-    									<h3><a href="http://0.0.0.0:3000/sports/<%= sport.slug %>">Varsity</a></h3>
+    									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
     								</div>
     								<div class="pull-right">
     									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
@@ -79,7 +81,7 @@
     					  		<h2><%= sport.title %></h2>
     				  			<div class="holder">
     				  				<div class="pull-left">
-    									<h3><a href="http://0.0.0.0:3000/sports/<%= sport.slug %>">Varsity</a></h3>
+    									<h3><a href="/sports/<%= sport.slug %>">Varsity</a></h3>
     								</div>
     								<div class="pull-right">
     									<h3 class="disabled"><a href="#">Junior Varisty</a></h3>
