--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,10 +10,10 @@
       <%= f.text_field :email %>
       
       <%= f.label :password %>
-      <%= f.text_field :password %>
+      <%= f.password_field :password %>
       
       <%= f.label :password_confirmation %>
-      <%= f.text_field :password_confirmation %>
+      <%= f.password_field :password_confirmation %>
     
       <br />
       <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
