--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Harbingernews</title>
   <%= favicon_link_tag %>
   <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_link_tag "buttons", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <style type="text/css"><%= yield :style %></style>
