--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,32 @@
-<h1>Sign Up</h1>
-<div class="row">
-  <div class="span12">
-    <%= form_for (@user) do |f| %>
-      <%= render 'shared/error_messages' %>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
+<div class="container">
+  <div class="row-fluid">
+    <div class="offset3 span6">
+      <div id="box">
+
+        <h1>Sign Up</h1>
+        <div class="row">
+          <div class="span12">
+            <%= form_for (@user) do |f| %>
+            <%= render 'shared/error_messages' %>
+            <%= f.label :name %>
+            <%= f.text_field :name %>
       
-      <%= f.label :email %>
-      <%= f.text_field :email %>
+            <%= f.label :email %>
+            <%= f.text_field :email %>
       
-      <%= f.label :password %>
-      <%= f.text_field :password %>
+            <%= f.label :password %>
+            <%= f.text_field :password %>
       
-      <%= f.label :password_confirmation %>
-      <%= f.text_field :password_confirmation %>
+            <%= f.label :password_confirmation %>
+            <%= f.text_field :password_confirmation %>
     
-      <br />
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+            <br />
+            <%= f.submit "Create my account", class: "btn btn-large btn-primary"%>
     
-    <% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
